MDL-52815 theme: group selection overflow fix

--- a/theme/bootstrapbase/less/moodle/user.less
+++ b/theme/bootstrapbase/less/moodle/user.less
@@ -260,11 +260,10 @@
         float: left;
         text-align: left;
         margin-right: 1%;
+        overflow: auto;
 
         select {
             min-width: 175px;
-            max-width: 100%;
-            overflow: auto;
         }
     }
 }
